fix logo spacing

--- a/resources/sass/web/components/_logo.scss
+++ b/resources/sass/web/components/_logo.scss
@@ -17,6 +17,7 @@
   }
 
   @include bp-lg() {
+    left: 19px;
     top: 18px;
     width: 235px;
   }
